//
//  TestTags.swift
//  SimpleToDo
//
//  Created by Takahiro Tominaga on 2022/04/15.
//

import Foundation

struct TestTags {
    static let listTitle = "list_title"
    static let addButton = "add_button"
    static let addText = "add_text"

    static let deleteButton = "delete_button"
}
